fixing spacing

--- a/portfolio-site/styles/Header.module.scss
+++ b/portfolio-site/styles/Header.module.scss
@@ -154,6 +154,8 @@
 .app .head-text {
   font-weight: 400;
 }
+
+// I know this is a yucky solution
 .scroll-indicator-bottom {
   width: 100%;
   margin-top: 2rem;
@@ -164,7 +166,7 @@
   font-weight: 400;
   svg {
     margin-top: 10px;
-    margin-left: 2rem;
+    margin-left: 1rem;
   }
   @media screen and (min-width: 1001px) {
     display: none;
@@ -180,7 +182,7 @@
   font-weight: 400;
   svg {
     margin-top: 10px;
-    margin-left: 2rem;
+    margin-left: 1rem;
   }
   @media screen and (max-width: 1001px) {
     display: none;
